CVS HEAD
  * Added Windows file path support

  * Bug fixes:
    - The parameter changes were discarded when creating
      new audio/MIDI device
    - The orchestras changes were not saved for the next session
      when orchestras.xml does not exist in the JSampler's home directory
    - In some cases the sampler configuration was not exported
      properly to LSCP script
    - Some minor bugfixes and enhancements

JSampler v0.7a: 2007-10-15
  * Added options for choosing default actions when channel is
    created and assignment of default MIDI/audio drivers to be used
    (choose Edit/Preferences, then click the `Defaults' tab)

  * A lists of recently used instrument files, directories,
    database instruments, database directories are now available
    for quick access, where appropriate.

  * The locations of the last loaded instrument, last scanned
    instrument/directory, last added instrument to orchestra are
    now saved for the next session

  * The last used instrument selection method is now saved
    for the next session

  * Implemented automatic scrolling when new channel is created to
    ensure that it is visible on the screen

  * Added context menu to the orchestra's instrument table with
    commands for editing an instrument, deleting an instrument,
    loading an instrument to a sampler channel and adding an
    instrument to MIDI instrument map

  * Implemented more proper retrieval of the MIDI/audio driver settings

  * Implemented some UI enhancements for speeding up the
    MIDI instrument mapping process

  * Implemented new table cell editor for editing string list
    parameters with possibilities

  * Added support for escape sequences

  * Now database instruments and directories can have multiline descriptions

  * Added support for formatting the instruments database
    (Choose from the instruments database window Actions/Format Database)

  * Added options for setting the maximum master and channel volume